--- a/index.html
+++ b/index.html
@@ -12,8 +12,21 @@
         <span class="url-text">https://unlimited.hantae.io</span>
         <h1 style="font-size: 40px; margin-bottom: 30px;">UNLIMITED</h1>
         <p>현실을 넘어선 무한한 자산의 세계</p>
-        <button class="btn-login" onclick="alert('현재 개발 중인 기능입니다! 게스트 모드를 이용해주세요.')">로그인하여 시작</button><br>
+        <button class="btn-login">로그인하여 시작</button><br>
         <button class="btn-guest" onclick="startGame('게스트')">게스트 모드로 참가</button>
+    </div>
+
+    <!-- 로그인 모달 -->
+    <div id="login-modal" class="modal-overlay hidden">
+        <div class="modal-content">
+            <h2>로그인</h2>
+            <form id="login-form">
+                <input type="text" placeholder="아이디" required>
+                <input type="password" placeholder="비밀번호" required>
+                <button type="submit" class="btn-login">로그인</button>
+            </form>
+            <button class="btn-close-modal">닫기</button>
+        </div>
     </div>
 </div>
 
