feat: 가로 모드 레이아웃 구현 및 상세 자산 시스템 통합

--- a/index.html
+++ b/index.html
@@ -19,68 +19,75 @@
 </div>
 
 <div class="game-container" id="game-main">
-    <div class="header-utils">
-        <button id="theme-toggle">🌓</button>
-    </div>
-    <div style="text-align: center; margin-bottom: 15px;">
-        <code style="color: #3498db;">https://unlimited.hantae.io</code>
-    </div>
-    
-    <div class="stats" style="border: 2px solid #e74c3c;">
-        <div style="display: flex; justify-content: space-between;">
-            <span>정부 세금 징수까지</span>
-            <span id="tax-timer" style="color: #e74c3c; font-weight: bold;">60초</span>
+    <div id="game-left-panel">
+        <div class="header-utils">
+            <button id="theme-toggle">🌓</button>
         </div>
-        <div style="font-size: 13px; color: #bdc3c7; margin-top: 5px;">
-            예상 납부액: <span id="expected-tax">0원</span> (세율: <span id="tax-rate">0%</span>)
+        <div style="text-align: center; margin-bottom: 15px;">
+            <code style="color: #3498db;">https://unlimited.hantae.io</code>
+        </div>
+        
+        <div class="stats" style="border: 2px solid #e74c3c;">
+            <div style="display: flex; justify-content: space-between;">
+                <span>정부 세금 징수까지</span>
+                <span id="tax-timer" style="color: #e74c3c; font-weight: bold;">60초</span>
+            </div>
+            <div style="font-size: 13px; color: #bdc3c7; margin-top: 5px;">
+                예상 납부액: <span id="expected-tax">0원</span> (세율: <span id="tax-rate">0%</span>)
+            </div>
+        </div>
+
+        <div class="stats">
+            <div id="user-info" style="font-size: 14px; color: #bdc3c7; margin-bottom: 5px;">사용자: -</div>
+            <div>현재 자산</div>
+            <div class="money" id="money">1,000,000원</div>
+            <div id="assets" style="font-size: 14px; margin-top: 5px;">
+                보유 코인: <span id="owned-coin">0</span>개, 
+                보유 주식: <span id="owned-stock">0</span>주, 
+                보유 건물: <span id="owned-buildings">0</span>채
+            </div>
         </div>
     </div>
 
-    <div class="stats">
-        <div id="user-info" style="font-size: 14px; color: #bdc3c7; margin-bottom: 5px;">사용자: -</div>
-        <div>현재 자산</div>
-        <div class="money" id="money">1,000,000원</div>
-        <div id="assets" style="font-size: 14px; margin-top: 5px;">
-            보유 코인: <span id="owned-coin">0</span>개, 
-            보유 주식: <span id="owned-stock">0</span>주, 
-            보유 건물: <span id="owned-buildings">0</span>채
+    <div id="game-center-panel">
+        <div class="tab-menu" style="display: flex; gap: 5px; margin-bottom: 15px;">
+            <button onclick="showTab('work')" style="flex:1;">🛠️ 업무</button>
+            <button onclick="showTab('investment')" style="flex:1; background:#f1c40f; color:#000;">📈 재테크</button>
+            <button onclick="showTab('realestate')" style="flex:1; background:#9b59b6; color:white;">🏠 부동산</button>
+        </div>
+
+        <div id="tab-work" class="tab-content">
+            <button class="btn-work" onclick="work()">💪 단순 업무 수행 (+10,000원)</button>
+            <div id="job-list">
+            </div>
+        </div>
+
+        <div id="tab-investment" class="tab-content" style="display:none;">
+            <div style="display: flex; gap: 20px;">
+                <div style="flex: 1;">
+                    <h3>🏢 주식 시장</h3>
+                    <div id="stock-list-container" style="max-height: 400px; overflow-y: auto;"></div>
+                </div>
+                <div style="flex: 1;">
+                    <h3>🪙 코인 거래소</h3>
+                    <div id="coin-list-container" style="max-height: 400px; overflow-y: auto;"></div>
+                </div>
+            </div>
+        </div>
+
+        <div id="tab-realestate" class="tab-content" style="display:none;">
+            <h3>🏠 부동산 매물</h3>
+            <div class="invest-item">
+                <strong>🏢 강남 빌딩</strong> <span id="building1-price">10,000,000,000원</span>
+                <button onclick="buyBuilding('building1')">구매하기</button>
+            </div>
+            <p style="font-size:12px;">*부동산은 소유 시 매초 자동으로 임대수익이 들어옵니다.</p>
         </div>
     </div>
 
-    <div class="tab-menu" style="display: flex; gap: 5px; margin-bottom: 15px;">
-        <button onclick="showTab('work')" style="flex:1;">🛠️ 업무</button>
-        <button onclick="showTab('investment')" style="flex:1; background:#f1c40f; color:#000;">📈 재테크</button>
-        <button onclick="showTab('realestate')" style="flex:1; background:#9b59b6; color:white;">🏠 부동산</button>
+    <div id="game-right-panel">
+        <div class="log" id="log"></div>
     </div>
-
-    <div id="tab-work" class="tab-content">
-        <button class="btn-work" onclick="work()">💪 단순 업무 수행 (+10,000원)</button>
-        <div id="job-list">
-        </div>
-    </div>
-
-    <div id="tab-investment" class="tab-content" style="display:none;">
-    <div style="display: flex; gap: 20px;">
-        <div style="flex: 1;">
-            <h3>🏢 주식 시장</h3>
-            <div id="stock-list-container" style="max-height: 400px; overflow-y: auto;"></div>
-        </div>
-        <div style="flex: 1;">
-            <h3>🪙 코인 거래소</h3>
-            <div id="coin-list-container" style="max-height: 400px; overflow-y: auto;"></div>
-        </div>
-    </div>
-</div>
-
-    <div id="tab-realestate" class="tab-content" style="display:none;">
-        <h3>🏠 부동산 매물</h3>
-        <div class="invest-item">
-            <strong>🏢 강남 빌딩</strong> <span id="building1-price">10,000,000,000원</span>
-            <button onclick="buyBuilding('building1')">구매하기</button>
-        </div>
-        <p style="font-size:12px;">*부동산은 소유 시 매초 자동으로 임대수익이 들어옵니다.</p>
-    </div>
-    <div class="log" id="log"></div>
 </div>
 
 <script src="main.js"></script>
